--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,20 @@ dapp/dist/
 dist
 /build
 /contracts/tokenAddresses.json
+/test-browser/reports/
+/reports/screenshots/
 
 # local env files
 .env.local
 .env.*.local
+nginx.crt
+nginx.key
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+chromedriver.log*
 
 # Editor directories and files
 .idea
