--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
-    "@riflending/riflending-js": "../rlending-js/",
+    "@riflending/riflending-js": "../rlending-js",
     "@rsksmart/rbank": "^1.0.1",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
