Fix decimals formatting Remove shortenDecimals vue filter We where using an older version of the decimal.js, instead of bumping it to the 10, decided to use the light version Change wss for https as we are getting a lot of errors for this Use formatNumber to show token balances that have already been converted to decimals and need to be formated to Significant Digits Use formatToken to convert to decimal precision, and then format it to significant digits

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VUE_APP_NETWORK_ID=31
 VUE_APP_WS_PROVIDER=wss://public-node.testnet.rsk.co:433
+VUE_APP_HTTP_PROVIDER=https://public-node.testnet.rsk.co:433
 VUE_APP_RBANK_CONTROLLER=0xda081f6f794bddfb033492d4b0aeb5e7e3e3ce98
 NODE_ENV=test
 BASE_URL=
