--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rbank",
+  "name": "rlending-ui",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "serve": "npx vue-cli-service serve",
+    "build": "npx vue-cli-service build",
+    "lint": "npx vue-cli-service lint",
     "e2e-chrome": "clear && node_modules/.bin/nightwatch /test-browser/tests --config nightwatch.conf.js --env chrome",
     "selenium": "node_modules/.bin/selenium-standalone install && node_modules/.bin/selenium-standalone start"
   },
