--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "events": "^3.1.0",
     "geckodriver": "^1.19.1",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
     "material-design-icons-iconfont": "^5.0.1",
     "nightwatch": "^1.3.5",
     "node-sass": "^4.12.0",
@@ -58,5 +60,16 @@
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --allow-empty"
+    }
   }
 }
