--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1",
     "vue-google-charts": "^0.3.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
