--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "@rsksmart/rlogin": "^0.1.1",
+    "@sentry/tracing": "^6.0.2",
+    "@sentry/vue": "^6.0.2",
     "@walletconnect/web3-provider": "^1.3.1",
     "bignumber.js": "^9.0.1",
     "core-js": "^3.6.4",
