--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ NODE_ENV=test
 BASE_URL=
 VUE_APP_GOOGLE_ANALYTICS_ID="G-Example"
 VUE_APP_GOOGLE_ANALYTICS_APPLICATION_NAME="RLending"
-VUE_APP_SENTRY_DSN="https://3fbeaeb7afde4754920f3dbf4428978a@o510972.ingest.sentry.io/5607394"
+VUE_APP_SENTRY_DSN="SENTRY-DSN-EXAMPLE"
