add VUE_APP_HTTP_EXPLORER and applied uses

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ BASE_URL=
 VUE_APP_GOOGLE_ANALYTICS_ID="G-Example"
 VUE_APP_GOOGLE_ANALYTICS_APPLICATION_NAME="RLending"
 VUE_APP_SENTRY_DSN="SENTRY-DSN-EXAMPLE"
+VUE_APP_HTTP_EXPLORER=https://explorer.testnet.rsk.co/
