change rsk swap to token bridge

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ VUE_APP_GOOGLE_ANALYTICS_ID="G-Example"
 VUE_APP_GOOGLE_ANALYTICS_APPLICATION_NAME="RLending"
 VUE_APP_SENTRY_DSN="SENTRY-DSN-EXAMPLE"
 VUE_APP_HTTP_EXPLORER=https://explorer.testnet.rsk.co/
+VUE_APP_HTTP_TOKEN_BRIDGE=https://testnet.tokenbridge.rsk.co/
