--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-fragment": "^1.5.1",
     "vue-google-charts": "^0.3.3",
     "vue-gtag": "^1.10.0",
+    "vue-hotjar": "^1.2.0",
     "vue-number-animation": "^1.0.5",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
