--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "events": "^3.1.0",
     "geckodriver": "^1.19.1",
+    "git-describe": "^4.0.4",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "material-design-icons-iconfont": "^5.0.1",
