--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-gtag": "^1.10.0",
     "vue-hotjar": "^1.2.0",
     "vue-number-animation": "^1.0.5",
+    "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^3.1.6",
     "vuetify": "^2.4.5",
     "vuex": "^3.1.3"
